[package]
name = "gui"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atk = "0.17.1"
cairo = "0.0.4"
gdk = "0.17.1"
gdk-pixbuf = "0.18.0"
gio = "0.18.1"
gio-sys = "0.18.1"
glib = "0.18.1"
gobject-2-0-sys = "0.46.4"
gtk = "0.17.1"
pango = "0.18.0"
pkg-config = "0.3.27"
