[package]
name = "gui_new"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
atk-sys = "0.17.0"
cairo-sys-rs = "0.18.0"
gdk-pixbuf-sys = "0.18.0"
gdk-sys = "0.17.0"
gio-sys = "0.18.1"
glib-sys = "0.18.1"
gobject-sys = "0.18.0"
gtk = "0.17.1"
pango-sys = "0.18.0"
